# taoniu-rs

./: .gitignore  README.md
cryptos/: .env.example  Cargo.toml
cryptos/src/: api.rs  app.rs  commands.rs  common.rs  main.rs  queue.rs  repositories.rs  tasks.rs
cryptos/src/api/: jwe.rs  jwt.rs  response.rs  v1.rs
cryptos/src/api/binance/futures/: v1.rs
cryptos/src/api/binance/spot/: v1.rs
cryptos/src/api/v1/: binance.rs
cryptos/src/api/v1/binance/: spot.rs
cryptos/src/commands/: api.rs  binance.rs  cron.rs  queue.rs  streams.rs  tasks.rs
cryptos/src/commands/api/: binance.rs
cryptos/src/commands/api/binance/: futures.rs  spot.rs
cryptos/src/commands/binance/: futures.rs  spot.rs
cryptos/src/commands/binance/futures/: account.rs  gambling.rs  indicators.rs  klines.rs  orders.rs  plans.rs  positions.rs  scalping.rs  strategies.rs  streams.rs  symbols.rs  tickers.rs  tradings.rs  triggers.rs
cryptos/src/commands/binance/spot/: account.rs  gambling.rs  indicators.rs  klines.rs  orders.rs  plans.rs  positions.rs  scalping.rs  strategies.rs  streams.rs  symbols.rs  tickers.rs  tradings.rs  triggers.rs
cryptos/src/commands/cron/binance/: futures.rs  spot.rs
cryptos/src/commands/queue/: nats.rs  rsmq.rs
cryptos/src/commands/queue/nats/: binance.rs
cryptos/src/commands/queue/rsmq/: binance.rs
cryptos/src/commands/streams/: binance.rs
cryptos/src/commands/streams/binance/: futures.rs  spot.rs
cryptos/src/commands/tasks/: binance.rs
cryptos/src/commands/tasks/binance/: futures.rs  spot.rs
cryptos/src/common/: context.rs  ctx.rs  db.rs  env.rs  func.rs  mutex.rs  nats.rs  pool.rs  rdb.rs  rmq.rs  rsmq.rs  value.rs
cryptos/src/config/: binance.rs
cryptos/src/config/binance/: margin.rs
cryptos/src/config/binance/futures/: config.rs
cryptos/src/config/binance/spot/: config.rs
cryptos/src/cron/binance/: futures.rs  spot.rs
cryptos/src/cron/binance/futures/: depth.rs  indicators.rs  klines.rs  orders.rs  plans.rs  strategies.rs  tickers.rs
cryptos/src/cron/binance/spot/: depth.rs  indicators.rs  klines.rs  orders.rs  plans.rs  positions.rs  strategies.rs  tickers.rs
cryptos/src/models/: binance.rs
cryptos/src/models/binance/: futures.rs  spot.rs
cryptos/src/models/binance/futures/: kline.rs  order.rs  plan.rs  position.rs  scalping.rs  strategy.rs  symbol.rs  trigger.rs
cryptos/src/models/binance/margin/: isolated.rs
cryptos/src/models/binance/spot/: kline.rs  order.rs  plan.rs  position.rs  scalping.rs  strategy.rs  symbol.rs  trigger.rs
cryptos/src/queue/: nats.rs
cryptos/src/queue/nats/payload/: binance.rs
cryptos/src/repositories/: binance.rs  jwe.rs
cryptos/src/repositories/auth/: token.rs
cryptos/src/repositories/binance/: futures.rs  spot.rs
cryptos/src/repositories/binance/futures/: account.rs  gambling.rs  indicators.rs  klines.rs  orders.rs  plans.rs  positions.rs  scalping.rs  strategies.rs  symbols.rs  tickers.rs  triggers.rs
cryptos/src/repositories/binance/margin/: isolated.rs
cryptos/src/repositories/binance/spot/: account.rs  indicators.rs  klines.rs  orders.rs  plans.rs  positions.rs  scalping.rs  strategies.rs  symbols.rs  tickers.rs  triggers.rs
cryptos/src/schema/binance/: futures.rs
cryptos/src/schema/binance/futures/: klines.rs  orders.rs  plans.rs  positions.rs  scalping.rs  strategies.rs  symbols.rs  triggers.rs
cryptos/src/schema/binance/margin/: isolated.rs
cryptos/src/streams/: api.rs
cryptos/src/streams/api/: requests.rs  responses.rs
cryptos/src/tasks/binance/: spot.rs
(+172 files in other folders)
