[package]
name = "cryptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-nats = "0.35.1"
axum = "0.7.5"
axum-extra = "0.9.3"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.16", features = ["derive"] }
diesel = { version = "2.2.2", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
futures-util = "0.3.30"
http = "1.1.0"
log = "0.4.22"
redis = { version = "0.25.4", features = ["tokio-comp"] }
rsmq_async = { version = "12.0.0", features = ["tokio-comp"] }
rust_decimal = "1.35.0"
rust_decimal_macros = "1.36.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
tokio-cron = "0.1.3"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
xid = "1.1.1"
